fix maven plugin